# FastAPI-ToDoCalendar

./: .env.example  .gitignore  Makefile  README.md  entrypoint.sh  pyproject.toml
docker_compose/: app.yaml  storages.yaml
src/: alembic.ini  app.py  config.py
src/api/: calendar.py  calendar_tasks.py  page.py  routers.py  users.py
src/api/dependencies/: calendar.py  calendar_access.py  user_dependencies.py  users_calendar.py
src/configs/: config_api.py  config_exceptions.py
src/database/: database.py
src/exceptions/: models_exceptions.py  tokens_error.py
src/front/static/css/: btn_bootstrap.css  modal__popup__profile.css  modal_popup.css  style.css
src/front/static/js/: index.js  main.js  modal_popup.js  modal_popup__profile.js  select_calendar.js
src/front/templates/html/: index.html  message.html
src/migrations/: env.py
src/migrations/versions/: 1eb3ebda0dcc_29_07_2024_user_access_calendar.py  2e347e514fed_29_07_add_calendar__users.py  343b4f5539b4_29_07_2024_final_user_access_calendar.py  8fc7334e3739_initial_migration.py  a97a51510331_29_07_final_calendal_access.py  b85ad2740d7d_initial_migration.py  ed4de6d9e9af_add_initial_roles.py  f5685ce40d61_initial_migration.py  f91df2b3f393_23_07_2024_initial_migration.py
src/models/: calendar.py  users.py
src/repositories/: calendar.py  calendar_access.py  user_repository.py
src/schemas/: calendar.py  users.py
src/services/: calendar.py  calendar_access.py  cookies_auth.py  user_services.py
src/utils/: check_token.py  filtering_user.py  manager.py  repository.py
(+20 files in other folders)
